templates for pages

--- a/Zabor/Views/Home/About.cshtml
+++ b/Zabor/Views/Home/About.cshtml
@@ -1,7 +1,32 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="content">
+
+
+    <h1>О компании</h1>
+
+
+    <p>Наша компания работает на рынке железобетонных изделий уже длительное время. Серьезных нареканий по своей работе не получали никогда, но очень внимательно относимся ко всем пожеланиям, стараясь сделать свою работу еще лучше и как можно более полно удовлетворить все потребности своих клиентов.</p>
+    <p>На сегодня наши заказчики есть почти в любом уголке Брянской области.</p>
+    <p>В перечень &nbsp;предлагаемых продуктов входят не только железобетонные заборы, но и ворота, садово-парковые и &nbsp;кованые изделия. Мы выполняем все виды работ не только по производству, но и по подготовке объекта, начиная с обследования объекта и всех необходимых замеров, заканчивая полной сдачей готового объекта.</p>
+    <table width="630" border="0" align="center" cellpadding="1" cellspacing="1">
+        <tbody>
+            <tr>
+                <td style="text-align: center; "><a class="gallery" rel="foto" title="кованые изделия" href="/userfiles/image/about/p1030762.jpg"><img width="170" height="128" style="border:2px #373737 solid;" alt="" src="/userfiles/image/about/resize_of_p1030762.jpg"></a></td>
+                <td style="text-align: center; "><a class="gallery" rel="foto" title="изделия из бетона" href="/userfiles/image/about/p1030351.jpg"><img width="170" height="128" style="border:2px #373737 solid;" alt="" src="/userfiles/image/about/resize_of_p1030351.jpg"></a></td>
+                <td style="text-align: center; "><a class="gallery" rel="foto" title="установка бетонных заборов" href="/userfiles/image/about/p1020459.jpg"><img width="170" style="border:2px #373737 solid;" height="128" alt="" src="/userfiles/image/about/resize_of_p1020459.jpg"></a></td>
+            </tr>
+        </tbody>
+    </table>
+    <p>&nbsp;</p>
+    <p style="text-align: left; "><strong><span style="color: rgb(255, 0, 0); "><span style="color: rgb(0, 0, 0); ">В производстве мы используем только высококачественные материалы, новое оборудование и современные технологии</span></span></strong><span style="color: rgb(255, 0, 0); "><span style="color: rgb(0, 0, 0); ">.</span></span></p>
+    <p>Ассортимент нашей продукции постоянно расширяется и пополняется. Мы стараемся постоянно совершенствоваться, идти в ногу со временем и соответствовать всем критериям постоянно меняющейся рыночной ситуации. &nbsp;</p>
+    <p>Нашу компанию отличает качество, высокий уровень обслуживания и добросовестность в выполнении всех работ. Став нашим клиентом вы не останетесь разочарованным.</p>
+    <div>&nbsp;</div>
+
+
+
+
+</div>
