--- a/Zabor/Views/Shared/_Layout.cshtml
+++ b/Zabor/Views/Shared/_Layout.cshtml
@@ -30,24 +30,56 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Products" asp-action="Index">Продукция</a></li>
+                    <li><a asp-area="" asp-controller="Montage" asp-action="Index">Монтаж</a></li>
+                    <li><a asp-area="" asp-controller="Production" asp-action="Index">Производство</a></li>
+                    <li><a asp-area="" asp-controller="Photogallery" asp-action="Index">Галерея</a></li>
+                  
+                </ul>
+                
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Компания <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="Home" asp-action="About">О компании</a></li>
+                            <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
+                            <li><a asp-area="" asp-controller="Home" asp-action="Feedback">Обратная связь</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - Zabor</p>
-        </footer>
+    <div class="body-content">
+
+
+
+        <!-- Page Content -->
+        <div id="content">
+            @RenderBody()
+
+
+
+        </div>
+
+
     </div>
 
+
+    <footer style="position: absolute; bottom: 0px; width: 100%; height: 60px; display: block;">
+        <hr />
+        <p>&copy; 2018 - Zabor.ru</p>
+    </footer>
+
+
+
     <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
