--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -2,9 +2,142 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div>
-    <img src="https://loorn.ru/media/img/bg.png" style="width: 100%;"/>
-</div>
+<style>
+    header.masthead {
+        text-align: center;
+        color: #fff;
+        background-image: url(https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg);
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-position: center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+
+        header.masthead .intro-text {
+            padding-top: 150px;
+            padding-bottom: 150px;
+        }
+
+    header.masthead .intro-text .intro-lead-in {
+        font-size: 40px;
+        font-style: italic;
+        line-height: 40px;
+        margin-bottom: 25px;
+        font-family: 'Droid Serif','Helvetica Neue',Helvetica,Arial,sans-serif;}
+
+    header.masthead .intro-text .intro-heading {
+        font-size: 50px;
+        font-weight: 700;
+        line-height: 75px;
+        margin-bottom: 50px;
+        font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;}
+
+
+
+    
+
+</style>
+
+<header class="masthead" style="">
+    <div class="">
+        <div class="intro-text">
+            <div class="intro-lead-in">Welcome To Our Studio!</div>
+            <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+            <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        </div>
+    </div>
+</header>
+
+
+@*<div>
+    <img src="https://loorn.ru/media/img/bg.png" style="width: 100%;" />
+</div>*@
+
+
+
+<section id="services">
+    <div class="">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-uppercase">Services</h2>
+                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">E-Commerce</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">Responsive Design</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">Web Security</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="bg-light" id="portfolio">
+    <div class="">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-uppercase">Portfolio</h2>
+                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                </a>
+            </div>
+            <div class="col-xs-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                </a>
+            </div>
+            <div class="col-xs-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                </a>
+            </div>
+            <div class="col-xs-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                </a>
+            </div>
+            <div class="col-xs-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                </a>
+            </div>
+            <div class="col-xs-6 col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 <div class="content">
